# infos_n_tasks

./: .gitignore  agente_aprovacao.py  agente_real.py  conceito com IA.md  conceitos.db  db_interface.py  graph.py  infos_n_tasks.py  loop_try.py  main.py  memo_descritivo.md  modelo.py  prompts.py  pyproject.toml  run_agent.py  teste_script.py  workflow.py
