[project]
name = "infos-n-tasks"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "agno>=1.7.9",
    "google-genai>=1.29.0",
    "ipython>=9.5.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.1.12",
    "langchain-tavily>=0.2.11",
    "langgraph>=0.6.7",
    "packaging>=25.0",
    "sqlalchemy>=2.0.42",
]
